Scroll Fix
- Fixed scrollbars always being visible, even if not enough content to scroll
- Created classes to force horizontal or vertical scroll if needed

--- a/404cafeclub/css/data.css
+++ b/404cafeclub/css/data.css
@@ -59,7 +59,7 @@ h6 {
 .scroll {
 	flex-grow: 1;
 	position: relative;
-	overflow-y: scroll;
+	overflow-y: auto;
 	scrollbar-color: #919ed7 #e5e8f5;
 }
 
